--- a/Restauracja/Views/Home/About.cshtml
+++ b/Restauracja/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Witamy na stronie restauracji i zapraszamy do zapoznania się z ofertą.</p>
