zmiana wyglądu, wyłączenie rejestracji

--- a/Restauracja/Views/Shared/_LoginPartial.cshtml
+++ b/Restauracja/Views/Shared/_LoginPartial.cshtml
@@ -9,14 +9,23 @@
         <li>
             @Html.ActionLink("Witaj, " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
+    </ul>
+
+        if (User.IsInRole("Admin"))
+        {
+        <ul class="nav navbar-nav navbar-right">
+            <li>@Html.ActionLink("Dodaj pracownika", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+        </ul>
+        }
+
+    <ul class="nav navbar-nav navbar-right">
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Wyloguj</a></li>
     </ul>
     }
 }
 else
-{
+    {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Zarejestruj", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Zaloguj", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
