--- a/Restauracja/Content/Site.css
+++ b/Restauracja/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+tr:first-child {
+    background-color: #efefef;
+}
+
+tr:hover td {
+    background-color: #efefef;
+}
