--- a/Restauracja/Views/Meals/Index.cshtml
+++ b/Restauracja/Views/Meals/Index.cshtml
@@ -5,6 +5,11 @@
 }
 
 <h2>Oferta</h2>
+@if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Chef")))
+{
+    <br />
+    @Html.ActionLink("Dodaj ", "Create", null, new { @class = "btn btn-success" })
+}
 
 <table class="table">
     <tr>
@@ -32,7 +37,10 @@
             @Html.DisplayFor(modelItem => item.Price) zł
         </td>
         <td>
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Szczegóły", "Details", new { id = item.Id }, new { @class = "btn btn-primary" })
+            @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("Chef"))){
+                @Html.ActionLink("Edytuj", "Edit", new { id = item.Id }, new { @class = "btn btn-warning" })
+            }
         </td>
     </tr>
 }
