--- a/Restauracja/Content/Site.css
+++ b/Restauracja/Content/Site.css
@@ -30,3 +30,9 @@ tr:first-child {
 tr:hover td {
     background-color: #efefef;
 }
+
+.navbar-toggle {
+    width: 20px;
+    height: 20px;
+    background-color:wheat;
+}
