--- a/Restauracja/Views/Meals/Edit.cshtml
+++ b/Restauracja/Views/Meals/Edit.cshtml
@@ -6,6 +6,20 @@
 
 <h2>Edytuj posiłek</h2>
 
+@if (ViewBag.Error == true)
+{
+    <div class="alert alert-danger" role="alert">
+        Wystąpił błąd podczas edycji.<br />
+        Spróbuj ponownie.
+    </div>
+}
+else if (ViewBag.Error == false)
+{
+    <div class="alert alert-success" role="alert">
+        Pomyślnie edytowano.
+        Pozycja w menu wygląda teraz następująco:
+    </div>
+}
 
 @using (Html.BeginForm())
 {
