--- a/Restauracja/Views/Shared/_Layout.cshtml
+++ b/Restauracja/Views/Shared/_Layout.cshtml
@@ -24,9 +24,14 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
                     <li>@Html.ActionLink("Informacje", "About", "Home")</li>
-                    <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Oferta", "Index", "Meals")</li>
                 </ul>
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Waiter"))
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Zamówienia", "Index", "Orders")</li>
+                    </ul>
+                }
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
