--- a/Restauracja/Views/Order_Meal/Create.cshtml
+++ b/Restauracja/Views/Order_Meal/Create.cshtml
@@ -15,24 +15,18 @@
         <h4>Order_Meal</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.OrderId, "OrderId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("OrderId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.OrderId, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MealId, "MealId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.MealId, "Nazwa posiłku", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("MealId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MealId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Meal.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
+                @Html.ActionLink("Dodaj", "Create", new { OrderId = ViewBag.ZamowienieId }, new { @class = "btn btn-primary" })
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
