--- a/Restauracja/Views/Order_Meal/Create.cshtml
+++ b/Restauracja/Views/Order_Meal/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Restauracja.Models.Order_Meal
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj";
 }
 
-<h2>Create</h2>
+<h2>Dodaj potrawę do zamówienia</h2>
 
 
 @using (Html.BeginForm()) 
@@ -25,8 +25,8 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Dodaj", "Create", new { OrderId = ViewBag.ZamowienieId }, new { @class = "btn btn-primary" })
+            <div class="col-md-offset-2 col-md-10">            
+                @Html.Hidden("OrderId")
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
@@ -34,7 +34,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("pokaż listę zamówionych potraw", "Index")
 </div>
 
 @section Scripts {
