--- a/Restauracja/Views/Order_Meal/Index.cshtml
+++ b/Restauracja/Views/Order_Meal/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<Restauracja.Models.Order_Meal>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista zamówionych potraw";
 }
 
-<h2>Index</h2>
+<h2>Lista zamówionych potraw</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
