--- a/Restauracja/Views/Orders/Delete.cshtml
+++ b/Restauracja/Views/Orders/Delete.cshtml
@@ -1,23 +1,13 @@
 ﻿@model Restauracja.Models.Order
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Zamknij rachunek";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Czy chcesz zamknąć rachunek?</h3>
 <div>
-    <h4>Order</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Waiter.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Waiter.Email)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Table)
@@ -36,11 +26,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MealTime)
+            @Html.DisplayNameFor(model => model.Price)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MealTime)
+            @Html.DisplayFor(model => model.Price)
         </dd>
 
     </dl>
@@ -49,8 +39,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Zamknij" class="btn btn-danger" /> |
+            @Html.ActionLink("Powrót", "Index", null, new { @class = "btn btn-primary" })
         </div>
     }
 </div>
