Dodany parametr widzialności pozycji w menu

--- a/Restauracja/Views/Meals/Edit.cshtml
+++ b/Restauracja/Views/Meals/Edit.cshtml
@@ -71,9 +71,17 @@ else if (ViewBag.Error == false)
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Visibility, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Visibility, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Visibility, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Zapisz" class="btn btn-success" />
-                @Html.ActionLink("Powrót", "Index", null, new { @class = "btn btn-primary" })
+                @Html.ActionLink("Powrót", "ChefIndex", null, new { @class = "btn btn-primary" })
             </div>
         </div>
     </div>
