--- a/Restauracja/Views/Account/ChefRegister.cshtml
+++ b/Restauracja/Views/Account/ChefRegister.cshtml
@@ -1,11 +1,11 @@
 ﻿@model Restauracja.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Zarejestruj";
+    ViewBag.Title = "Zarejestruj nowego pracownika";
 }
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("ChefRegister", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Utwórz nowe konto.</h4>
@@ -31,6 +31,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
+            @Html.Hidden("role")
             <input type="submit" class="btn btn-default" value="Zarejestruj" />
         </div>
     </div>
