--- a/Restauracja/Views/Order_Meal/Statistic.cshtml
+++ b/Restauracja/Views/Order_Meal/Statistic.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Restauracja.Models.Order_Meal>
+﻿@model List<Restauracja.Controllers.Order_MealController.Class1>
 
 @{
     ViewBag.Title = "Statistic";
@@ -11,27 +11,18 @@
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Table)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Table)
+            @Html.DisplayFor(modelItem => item.TableId)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Price)
+            @Html.DisplayFor(modelItem => item.Sum)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
