--- a/Restauracja/Views/Shared/_Layout.cshtml
+++ b/Restauracja/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                 @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                 {
                     <ul class="nav navbar-nav">
-                        <li>@Html.ActionLink("Statystyki", "Statistic", "Order_Meal")</li>
+                        <li>@Html.ActionLink("Statystyki", "Statistic", "Orders")</li>
                     </ul>
                 }
                 @Html.Partial("_LoginPartial")
